public/sass/screen.scss
@import "/reset.css";

$main-bg-colour: #111;
$main-font-colour: #5c5c5c;
$off-white: #f6f6f6;
$splash: #1ebfd7;
$link-underline-colour: #3d3d3d;
$lighter-grey: #707070;

html, body {
  font: {
    family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  }
  background: $main-bg-colour;
  color: $main-font-colour;
}

a {
  color: $splash;
  text-decoration: none;
  border-bottom: 1px solid $link-underline-colour;
  &:hover { border-bottom-color: $lighter-grey; }
}

#container {
  margin: 0 auto;
  padding: 0 30px;
  width: 795px;
}

#header {
  h1 {
    margin-top: 16px;
    letter-spacing: -0.05em;
    font: { weight: bold; size: 3.5em; }
    a {
      border: none;
      &:hover { text-shadow: $lighter-grey 1px 1px 1px; }
    }
    text-shadow: $link-underline-colour 1px 1px 1px;
  }
}

#intro { margin: 10px 0 28px 0; }

h2 {
  font: { weight: bold; size: 1.5em; }
}

#content {
  margin: 10px 0;
  margin-bottom: 10px;
}

#nav {
  display: block;
  clear: both;
  overflow: auto;
  margin: 10px auto 4px auto;
  border-bottom: 1px solid $link-underline-colour;
  ul {
    list-style: none;
    li {
      display: inline;
      font-size: 24px;
      float: left;
      a {
        color: $off-white;
        float: left;
        margin: 0 18px 0 0;
        padding: 0 0 10px 0;
        border: none;
        &:hover {
          color: $splash;
          border-bottom: 4px solid $link-underline-colour;
        }
      }
      a.current {
        color: $splash;
        border-bottom: 4px solid $splash;
      }
    }
  }
}

#jscontent {
  #snapping, #reading, #tweeting, #listening, #coding, #running {
    display: none;
    p { font-size: 14px; margin: 16px 0 20px 0; }
  }
  #snapping .content {
    a { border: none; }
    img {
      width: 75px; height: 75px; font-size: 8px; margin: 0 4px 4px 0;
      border: 1px solid $link-underline-colour;
      &:hover { 
        border: 1px solid $splash;
      }
    }
  }
  #reading .content {
    li {
      line-height: 20px;
      margin-bottom: 10px;
      span.item-details {
        color: $lighter-grey;
        font-size: 14px;
        padding-top: 6px;
      }
    }
  }
  #listening .content {
    li {
      height: 36px;
      line-height: 20px;
      margin-bottom: 10px;
      span.art {
        float: left;
        margin-right: 10px;
        a { border: none; }
        img {
          border: 1px solid $link-underline-colour;
          &:hover { 
            border: 1px solid $splash;
          }
        }
      }
      span.when {
        font-size: 13px;
      }
    }
  }
}

#footer {
  padding: 6px 0;
  margin-bottom: 16px;
  border-top: 1px solid $link-underline-colour;
  font-size: 13px;
}

